# test_task

./: .gitignore  .pdm-python  README.md  pyproject.toml
src/: server.py
src/data/: data.csv
src/results/: Solve(cleaned).ipynb  Solve.py
src/utils/: api_cals.py  predict.py
